<resources>
    <string name="app_name">HeiMusic</string>
    <string name="title_home">本地音乐</string>
    <string name="title_dashboard">我的</string>
    <string name="title_notifications">发现音乐</string>
    <string name="play">播放</string>
    <string name="player_panel_empty_title">墨猫音乐.</string>
    <string name="player_panel_empty_info_title">HeiMusic for Android.</string>
    <string name="title_activity_music_detail">MusicDetailActivity</string>
    <string name="unknow_audio_duration">--:--</string>
    <string name="title_playlist">播放列表</string>
    <string name="home_fragment_empty_list_notice">当前列表为空，可在 [我的]-> [扫描本地音乐] 进行扫描</string>
    <string name="mymusic_fragment_version">墨猫音乐 v1.0</string>
    <string name="mymusic_fragment_brief">当前扫描到的音乐数量：0</string>
    <string name="mymusic_fragment_scan_files">扫描本地音乐</string>
    <string name = "mymusic_fragment_open_dir">打开音乐文件夹</string>
</resources>
