<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_music_detail_wrap">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/music_detail_return_button"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            app:iconPadding="0dp"
            app:icon="@drawable/ic_expand_more_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/MusicDetailPanelButtonStyle"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/music_detail_album_art_wrap"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/music_detail_return_button"
            app:layout_constraintDimensionRatio="1:1">

            <ImageView
                android:id="@+id/music_detail_album_art"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/default_albumart"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/music_detail_songname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:layout_marginTop="20dp"
            android:text="@string/player_panel_empty_title"
            android:textSize="26sp"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/music_detail_album_art_wrap"/>
        <TextView
            android:id="@+id/music_detail_songinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="10dp"
            android:text="@string/player_panel_empty_info_title"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/music_detail_songname"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/music_detail_action_panel">

            <TextView
                android:id="@+id/music_detail_current_position"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknow_audio_duration"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <SeekBar
                android:id="@+id/music_detail_seek_bar"
                android:thumb="@drawable/seekbar_thumb"
                android:layout_width="0dp"
                android:layout_height="11dp"
                android:minHeight="11dp"
                app:layout_constraintStart_toEndOf="@id/music_detail_current_position"
                app:layout_constraintEnd_toStartOf="@id/music_detail_duration"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


            <TextView
                android:id="@+id/music_detail_duration"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknow_audio_duration"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintStart_toEndOf="@id/music_detail_seek_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/music_detail_action_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/music_detail_action_panel_play_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/music_detail_action_panel_switch_previous"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:icon="@drawable/ic_playlist_add_check_black_24dp"
                style="@style/MusicDetailPanelButtonStyle"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/music_detail_action_panel_switch_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/music_detail_action_panel_play_method"
                app:layout_constraintEnd_toStartOf="@id/music_detail_action_panel_action_action"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:icon="@drawable/ic_skip_previous_black_24dp"
                style="@style/MusicDetailPanelButtonStyle"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/music_detail_action_panel_action_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/music_detail_action_panel_switch_previous"
                app:layout_constraintEnd_toStartOf="@id/music_detail_action_panel_switch_next"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:iconSize="40dp"
                app:icon="@drawable/ic_pause_circle_outline_black_24dp"
                style="@style/MusicDetailPanelButtonStyle.ActionButton"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/music_detail_action_panel_switch_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/music_detail_action_panel_action_action"
                app:layout_constraintEnd_toStartOf="@id/music_detail_action_panel_play_list"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:icon="@drawable/ic_skip_next_black_24dp"
                style="@style/MusicDetailPanelButtonStyle"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/music_detail_action_panel_play_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/music_detail_action_panel_switch_next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:icon="@drawable/ic_playlist_play_black_24dp"
                style="@style/MusicDetailPanelButtonStyle"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>